--- a/cursojs.html
+++ b/cursojs.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Curso de JavaScript</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1-w1RfGIov4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank" rel="external">Veja o curso completo</a>
+    <a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank" rel="external"><p>Veja o curso completo</p></a>
     <br>
     <a href="index.html"><img src="backbutton_104978.png" alt="botão de voltar"></a>
 </body>
